@@ -117,6 +117,9 @@ static void _config_init_reload(struct mqtt3_config *config)
 	config->acl_file = NULL;
 	config->allow_anonymous = true;
 	config->allow_duplicate_messages = false;
+	config->allow_zero_length_clientid = true;
+	config->auto_id_prefix = NULL;
+	config->auto_id_prefix_len = 0;
 	config->autosave_interval = 1800;
 	config->autosave_on_changes = false;
 	if(config->clientid_prefixes) _mosquitto_free(config->clientid_prefixes);
@@ -220,6 +223,7 @@ void mqtt3_config_cleanup(struct mqtt3_config *config)
 #endif
 
 	if(config->acl_file) _mosquitto_free(config->acl_file);
+	if(config->auto_id_prefix) _mosquitto_free(config->auto_id_prefix);
 	if(config->clientid_prefixes) _mosquitto_free(config->clientid_prefixes);
 	if(config->config_file) _mosquitto_free(config->config_file);
 	if(config->password_file) _mosquitto_free(config->password_file);
@@ -621,6 +625,8 @@ int _config_read_file(struct mqtt3_config *config, bool reload, const char *file
 					if(_conf_parse_bool(&token, "allow_anonymous", &config->allow_anonymous, saveptr)) return MOSQ_ERR_INVAL;
 				}else if(!strcmp(token, "allow_duplicate_messages")){
 					if(_conf_parse_bool(&token, "allow_duplicate_messages", &config->allow_duplicate_messages, saveptr)) return MOSQ_ERR_INVAL;
+				}else if(!strcmp(token, "allow_zero_length_clientid")){
+					if(_conf_parse_bool(&token, "allow_zero_length_clientid", &config->allow_zero_length_clientid, saveptr)) return MOSQ_ERR_INVAL;
 				}else if(!strncmp(token, "auth_opt_", 9)){
 					if(strlen(token) < 12){
 						/* auth_opt_ == 9, + one digit key == 10, + one space == 11, + one value == 12 */
@@ -656,6 +662,13 @@ int _config_read_file(struct mqtt3_config *config, bool reload, const char *file
 				}else if(!strcmp(token, "auth_plugin")){
 					if(reload) continue; // Auth plugin not currently valid for reloading.
 					if(_conf_parse_string(&token, "auth_plugin", &config->auth_plugin, saveptr)) return MOSQ_ERR_INVAL;
+				}else if(!strcmp(token, "auto_id_prefix")){
+					if(_conf_parse_string(&token, "auto_id_prefix", &config->auto_id_prefix, saveptr)) return MOSQ_ERR_INVAL;
+					if(config->auto_id_prefix){
+						config->auto_id_prefix_len = strlen(config->auto_id_prefix);
+					}else{
+						config->auto_id_prefix_len = 0;
+					}
 				}else if(!strcmp(token, "autosave_interval")){
 					if(_conf_parse_int(&token, "autosave_interval", &config->autosave_interval, saveptr)) return MOSQ_ERR_INVAL;
 					if(config->autosave_interval < 0) config->autosave_interval = 0;
